Update package dependencies, use vite

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    %svelte.head%
+    %sveltekit.head%
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HYKYJLVFX6"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -17,6 +17,6 @@
     </script>
   </head>
   <body>
-    %svelte.body%
+    %sveltekit.body%
   </body>
 </html>
